--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <!-- 依赖库版本定义-->
     <ef.version>1.0.0</ef.version>
     <junit.version>4.12</junit.version>
-    <spring.version>4.3.17</spring.version>
+    <spring.version>4.2.5.RELEASE</spring.version>
     <hibernate.version>4.3.5.Final</hibernate.version>
     <hibernate.annotations.version>4.0.4.Final</hibernate.annotations.version>
     <mysql.driver.version>5.1.22</mysql.driver.version>
@@ -193,12 +193,12 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.8.11.1</version>
+      <version>2.8.5</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.8.11.1</version>
+      <version>2.8.5</version>
     </dependency>
     <!-- jackson end -->
     <!-- POI start -->
